# newscrypt

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
newscrypt/: config.py  main.py
newscrypt/services/: __init__.py  article_scraper.py  news_service.py  script_service.py  subtitle_service.py  tts_service.py  video_service.py
services/: news_service.py  script_service.py  subtitle_service.py  tts_service.py  video_service.py
